--- a/client/static/css/main.css
+++ b/client/static/css/main.css
@@ -23,8 +23,36 @@ div.loginbox {
   height: 50%;
 
   padding: 20px;
-  background: white;
+  background: rgba(255,255,255,0.90);
   color: gray;
   text-align: center;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+}
+
+div.loginboxBack {
+  position: absolute;
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+
+  padding: 20px;
+  background: rgba(1, 8, 1, 0.65);
+}
+
+.logo img{
+  width: 200px;
+}
+
+.loginform {
+  transition: all linear 0.5s;
+  line-height: 20px;
+  opacity: 1;
+  padding: 10px;
+}
+
+.registrationform {
+  line-height: 0;
+  padding: 0 10px;
+  display: none;
 }
