--- a/client/static/partials/login.html
+++ b/client/static/partials/login.html
@@ -25,13 +25,13 @@
        <form class="col s12" ng-submit='login()'>
          <div class="row">
            <div class="input-field col s12">
-             <input id="email" type="text" class="validate" ng-model='login.email'>
+             <input id="email" type="text" class="validate" ng-model='loginUser.email'>
              <label for="email">Email</label>
            </div>
          </div>
          <div class="row">
            <div class="input-field col s12">
-             <input id="password" type="password" class="validate" ng-model='login.password'>
+             <input id="password" type="password" class="validate" ng-model='loginUser.password'>
              <label for="password">Password</label>
            </div>
            <button>login</button>
