--- a/client/static/partials/login.html
+++ b/client/static/partials/login.html
@@ -1,4 +1,4 @@
-<div ng-controller='loginController'>
+<div ng-controller='usersController'>
   <div class="video">
         <video width="600" height="200" autoplay="autoplay" loop="loop" preload>
           <source src="../videos/background.mp4" type="video/mp4" >
