--- a/client/static/partials/dashboard.html
+++ b/client/static/partials/dashboard.html
@@ -3,7 +3,7 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><img style="width:170px;" src="../img/logo.png" alt="" /></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Robert Bruce</a></li>
+        <li><a href="sass.html">Welcome {{ currentUser.username }}</a></li>
         <li><a href="badges.html">Credit: $0</a></li>
         <li><button type="button" class="btn btn-default navbar-btn" ng-click="logout()">Logout</button></li>
       </ul>
