create pools web page and logic done

--- a/client/static/partials/dashboard.html
+++ b/client/static/partials/dashboard.html
@@ -5,7 +5,8 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">Welcome {{ currentUser.username }}</a></li>
         <li><a href="badges.html">Credit: $0</a></li>
-        <li><button type="button" class="btn btn-default navbar-btn" ng-click="logout()">Logout</button></li>
+        <li><button type="button" class="btn btn-default navbar-btn" ng-click="createPoolButton()">Create Pool</button></li>
+        <li><button type="button" class="btn btn-default navbar-btn" ng-click="logoutButton()">Logout</button></li>
       </ul>
     </div>
   </nav>
