--- a/client/static/partials/createpool.html
+++ b/client/static/partials/createpool.html
@@ -5,9 +5,8 @@
 		    <label>Name of the Pool: </label>
 		    <input type="text" class="form-control" ng-model="pool_match.poolName">
 		</div>
-		<div class="form-group">
-		    <label>Amount to Play: </label>
-		    <select class="form-control" ng-model="pool_match.playAmount">
+		<div class="form-group" input-field>
+		    <select class="" ng-model="pool_match.playAmount"  material-select watch>
 		    	<option value="" disabled>Choose Amount</option>
 		    	<option value="10">10</option>
 		    	<option value="20">20</option>
@@ -17,9 +16,8 @@
 		    </select>
 		</div>
 		<br>
-		<div class="form-group">
-		    <label>Choose Match: </label>
-		    <select class="form-control" ng-model="pool_match.poolMatches">
+		<div class="form-group" input-field>
+		    <select class="form-control" ng-model="pool_match.poolMatches" material-select watch>
 		    	<option value="" disabled>Choose matches</option>
 		    	<option ng-repeat="match in matchsList" value="{{ match.homeTeamName }} vs {{ match.awayTeamName }}">{{ match.homeTeamName }} vs {{ match.awayTeamName }}</option>
 		    </select>
