added watch button to dashboard

--- a/client/static/partials/dashboard.html
+++ b/client/static/partials/dashboard.html
@@ -56,7 +56,8 @@
              <td>${{pool.poolPlayAmount}}</td>
              <td>{{pool._poolUsers.length}}</td>
              <td>${{pool.poolPlayAmount * pool._poolUsers.length}}</td>
-             <td><button type="button" class="btn btn-default" ng-click="joinPool(pool)">Join</button></td>
+             <td ng-if="pool._poolMatches[0].matchDate > now"><button type="button" class="btn btn-default" ng-click="joinPool(pool)">Join</button></td>
+             <td ng-if="pool._poolMatches[0].matchDate < now"><button type="button" class="btn btn-default" ng-click="watchPool(pool)">Watch</button></td>
            </tr>
          </tbody>
        </table>
