img add in user

--- a/client/static/partials/pool.html
+++ b/client/static/partials/pool.html
@@ -2,6 +2,7 @@
 	<div>
 		<h3>Pool Players: </h3>
 		<ul ng-repeat="user in users">
+			<li><img src="./img/profile/{{user.img}}"></li>
 			<li>{{ user.username }}</li>
 		</ul>
 	</div>
