centered dashboard table

--- a/client/static/partials/dashboard.html
+++ b/client/static/partials/dashboard.html
@@ -39,7 +39,7 @@
 
   <div class="wrapBody">
     <h2>Current Pools:</h2>
-    <table>
+    <table class="centered striped">
          <thead>
            <tr>
                <th data-field="id">Pool Name</th>
