--- a/client/static/partials/pool.html
+++ b/client/static/partials/pool.html
@@ -1,34 +1,96 @@
  <div ng-controller='poolPredictionController'>
-	<div>
-		<h3>Pool Players: </h3>
-		<ul ng-repeat="user in users">
-			<li><img src="./img/profile/{{user.img}}"></li>
-			<li>{{ user.username }}</li>
-		</ul>
-	</div>
-	<div id="payPool" class="modal">
-      <div class="modal-content">
-          <h4>Pay Pool</h4>
-          <h6>Current Credit: ${{userCredit}}</h6>
-          <h6 style="color:red">Amount to play: ${{ pool.poolPlayAmount }}</h6>
-      </div>
-      <div class="modal-footer">
-          <a ng-click="createPrediction()" class="modal-action modal-close waves-effect waves-green btn-flat">Pay</a>
-          <a href="#/pool" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-      </div>
-  </div>
-	<div>
-		<h3>Your Predictions: </h3>
-		<div ng-repeat="match in matches">
-			<img src="./img/ligamx/{{match.homeTeamImg}}">
-			<label>{{ match.homeTeamName }}</label>
-			<input type="text" placeholder="0" ng-model="teamPrediction[match.homeTeamName]">
-			<label>VS</label>
-			<input type="text" placeholder="0" ng-model="teamPrediction[match.awayTeamName]">
-			<label>{{ match.awayTeamName }}</label>
-			<img src="./img/ligamx/{{match.awayTeamImg}}"><br>
-			<label>play at: {{ match.matchDate }}</label><br><br>
-		</div>
-		<span><button><a href='#payPool' modal>Save & Pay Prediction</a></button></span>
-	</div>
-</div>
+
+   <!-- Modal Structure -->
+   <div id="creditModal" class="modal">
+       <div class="modal-content">
+           <h4>Buy Credit</h4>
+           <h6>Current Credit: ${{userCredit}}</h6>
+           <div input-field>
+               <label>Choose amout:</label><br>
+               <select class="" ng-model="creditBuy.amount" material-select watch>
+                   <option value="5">$5</option>
+                   <option value="10">$10</option>
+                   <option value="20">$20</option>
+                   <option value="50">$50</option>
+                   <option value="100">$100</option>
+               </select>
+           </div>
+       </div>
+       <div class="modal-footer">
+           <a ng-click="updateCredit()" class="modal-action modal-close waves-effect waves-green btn-flat">Buy</a>
+           <a href="#/dashboard" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+       </div>
+   </div>
+ <!-- Dropdown Structure -->
+ <ul id='userDropdown' class='dropdown-content'>
+     <li><a href='#creditModal' modal>Add Credit</a></li>
+     <li><a ng-click="logoutButton()">Logout</a></li>
+ </ul>
+   <nav>
+     <div class="nav-wrapper">
+       <a href="#" class="brand-logo"><img style="width:170px;padding-top:8px;" src="../img/logo.png" alt="" /></a>
+       <ul id="nav-mobile" class="right hide-on-med-and-down">
+         <li><a href='#creditModal' modal>Credit: ${{userCredit}}</a></li>
+         <li><button type="button" class="btn btn-default navbar-btn" ng-click="createPoolButton()">Create Pool</button></li>
+         <li><a class='dropdown-button btn' href='javascript:void(0);' data-activates='userDropdown' dropdown data-hover="true">Welcome {{ currentUser.username }}</a></li>
+       </ul>
+     </div>
+   </nav>
+
+
+  <div class="row">
+     <div class="col s3"><span class="flow-text">
+      	<div>
+      		<h5>Pool Players: </h5>
+      		<ul class="collection" ng-repeat="user in users">
+      			<li class="collection-item avatar collectionColor">
+              <img src="./img/profile/{{user.img}}" class="circle">
+              <span class="title">{{ user.username }}</span>
+              <br>
+              <label style="color:black;">Contact: {{user.email}}</label>
+            </li>
+      		</ul>
+      	</div>
+        </span></div>
+        <div class="col s9"><span class="flow-text">
+        		<h4>Your Predictions: </h4>
+
+        		<div class="row center match" ng-repeat="match in matches">
+              <div class="col s3">
+        			     <img src="./img/ligamx/{{match.homeTeamImg}}" class="teamImgs"><br>
+        			      <span class="teamName">{{ match.homeTeamName }}</span>
+              </div>
+              <div class="col s1">
+        			     <input type="text" placeholder="X" ng-model="teamPrediction[match.homeTeamName]">
+              </div>
+              <div class="col s4">
+        			     <label>VS</label><br>
+                   <label><strong>{{ match.matchDate | date: longDate }}</strong></label>
+              </div>
+              <div class="col s1">
+        			     <input type="text" placeholder="X" ng-model="teamPrediction[match.awayTeamName]">
+              </div>
+              <div class="col s2">
+                  <img src="./img/ligamx/{{match.awayTeamImg}}" class="teamImgs"><br>
+        			     <span class="teamName">{{ match.awayTeamName }}</span>
+              </div>
+        		</div>
+
+
+            <div id="payPool" class="modal">
+                <div class="modal-content">
+                    <h4>Pay Pool</h4>
+                    <h6>Current Credit: ${{userCredit}}</h6>
+                    <h6 style="color:red">Amount to play: ${{ pool.poolPlayAmount }}</h6>
+                </div>
+                <div class="modal-footer">
+                    <a ng-click="createPrediction()" class="modal-action modal-close waves-effect waves-green btn-flat">Pay</a>
+                    <a href="#/pool" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+                </div>
+            </div>
+        		<span style="float:right;"><button class="btn btn-default"><a href='#payPool' style='color:white;' modal>Save & Pay Prediction</a></button> <a href="#/dashboard" class=" waves-effect waves-green btn-flat">Cancel</a></span>
+        	</div>
+        </span></div>
+     </div>
+  <div>
+</div><!-- end partial -->
