fixed poolon past games pool glitch

--- a/client/static/partials/poolon.html
+++ b/client/static/partials/poolon.html
@@ -33,10 +33,10 @@
 
 					{{predArr}}
 
-					<div class="row center match" ng-repeat="prediction in predictionResults">
+					<div class="row center match" ng-repeat="prediction in playerPredictionsModal">
 						<div class="col s3">
-							<img src="./img/ligamx/{{match.homeTeamImg}}" class="teamImgs"><br>
-							<span class="teamName">{{match.homeTeamName}}</span>
+							<img src="./img/ligamx/" class="teamImgs"><br>
+							<span class="teamName"></span>
 						</div>
 
 					</div>
